--- a/src/i18n/en.po
+++ b/src/i18n/en.po
@@ -1,7 +1,7 @@
-# Language ja-JP translations for Mine sweeper package.
+# Language en translations for Mine sweeper package.
 # Copyright (C) 2019 OC software
 # This file is distributed under the same license as the Mine sweeper package.
-# <EMAIL@ADDRESS>, 2019.
+# <toshi@oc-soft.net>, 2019.
 #
 msgid ""
 msgstr ""
@@ -9,36 +9,36 @@ msgstr ""
 "Report-Msgid-Bugs-To: toshi@oc-soft.net\n"
 "POT-Creation-Date: 2019-12-08 14:52+0900\n"
 "PO-Revision-Date: 2019-12-08 14:55+0900\n"
-"Last-Translator: <EMAIL@ADDRESS>\n"
-"Language-Team: Language ja-JP\n"
-"Language: ja-JP\n"
+"Last-Translator: toshi@oc-soft.net\n"
+"Language-Team: Language en\n"
+"Language: en\n"
 "MIME-Version: 1.0\n"
 "Content-Type: text/plain; charset=UTF-8\n"
 "Content-Transfer-Encoding: 8bit\n"
 
 msgid "Loading..."
-msgstr "読み込み中..."
+msgstr "Loading..."
 
 msgid "Game over"
-msgstr "ゲームオーバー"
+msgstr "Game over"
 
 msgid "Play again"
-msgstr "もう一度"
+msgstr "Play again"
 
 msgid "About this Project"
-msgstr "プロジェクトについて"
+msgstr "About this Project"
 
 msgid "OK"
-msgstr ""
+msgstr "OK"
 
 msgid "NG"
-msgstr ""
+msgstr "NG"
 
 msgid "Icon"
-msgstr "アイコン"
+msgstr "Icon"
 
 msgid "Cacel"
-msgstr "キャンセル"
+msgstr "Cancel"
 
 msgid "Please select icons"
-msgstr "アイコンを選択してください"
+msgstr "Please select icons"
