I am working on progress to localize the application.

--- a/src/i18n/ja.po
+++ b/src/i18n/ja.po
@@ -7,7 +7,7 @@ msgid ""
 msgstr ""
 "Project-Id-Version: Mine sweeper 0.3.0\n"
 "Report-Msgid-Bugs-To: toshi@oc-soft.net\n"
-"POT-Creation-Date: 2019-12-08 14:52+0900\n"
+"POT-Creation-Date: 2019-12-09 08:05+0900\n"
 "PO-Revision-Date: 2019-12-08 14:55+0900\n"
 "Last-Translator: <toshi@oc-soft.net>\n"
 "Language-Team: Language ja\n"
@@ -42,3 +42,6 @@ msgstr "キャンセル"
 
 msgid "Please select icons"
 msgstr "アイコンを選択してください"
+
+msgid "You won the game"
+msgstr "ゲームクリア"
