--- a/src/i18n/en.po
+++ b/src/i18n/en.po
@@ -7,7 +7,7 @@ msgid ""
 msgstr ""
 "Project-Id-Version: Mine sweeper 0.3.0\n"
 "Report-Msgid-Bugs-To: toshi@oc-soft.net\n"
-"POT-Creation-Date: 2019-12-09 08:05+0900\n"
+"POT-Creation-Date: 2020-07-11 19:22+0900\n"
 "PO-Revision-Date: 2019-12-08 14:55+0900\n"
 "Last-Translator: toshi@oc-soft.net\n"
 "Language-Team: Language en\n"
@@ -45,3 +45,9 @@ msgstr "Please select icons"
 
 msgid "You won the game"
 msgstr "You won the game"
+
+msgid "Labels ..."
+msgstr "Labels ..."
+
+msgid "Lighting"
+msgstr "Lighting"
