--- a/src/i18n/messages.po
+++ b/src/i18n/messages.po
@@ -6,9 +6,9 @@
 #, fuzzy
 msgid ""
 msgstr ""
-"Project-Id-Version: Mine sweeper 0.3.0\n"
+"Project-Id-Version: Mine sweeper 0.4.0\n"
 "Report-Msgid-Bugs-To: toshi@oc-soft.net\n"
-"POT-Creation-Date: 2020-07-11 19:22+0900\n"
+"POT-Creation-Date: 2020-09-03 07:50+0900\n"
 "PO-Revision-Date: YEAR-MO-DA HO:MI+ZONE\n"
 "Last-Translator: FULL NAME <EMAIL@ADDRESS>\n"
 "Language-Team: LANGUAGE <LL@li.org>\n"
@@ -51,4 +51,31 @@ msgid "Labels ..."
 msgstr ""
 
 msgid "Lighting"
+msgstr ""
+
+msgid "Colors ..."
+msgstr ""
+
+msgid "Please choose color"
+msgstr ""
+
+msgid "Label"
+msgstr ""
+
+msgid "Button front face"
+msgstr ""
+
+msgid "Button back face"
+msgstr ""
+
+msgid "Board"
+msgstr ""
+
+msgid "Backgournd"
+msgstr ""
+
+msgid "Text"
+msgstr ""
+
+msgid "Initial Setting"
 msgstr ""
