I fixed the bug not to show message "color" but "icon" in Japanese.
When you show color picker dialog, The dialog header is showing wrong
Japanese translated message.

--- a/src/i18n/ja.po
+++ b/src/i18n/ja.po
@@ -56,7 +56,7 @@ msgid "Colors ..."
 msgstr "色..."
 
 msgid "Please choose color"
-msgstr "アイコンを選択してください"
+msgstr "色を選択してください"
 
 msgid "Label"
 msgstr "ラベル"
